--- a/packages/learn-js/guide/public/index.html
+++ b/packages/learn-js/guide/public/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>学习typscript</h1>
-    <script type="module" src="../out/index.js"></script>
+    <h1>学习js</h1>
+    <script type="module" src="../index.js"></script>
   </body>
 </html>
