--- a/packages/learn-js/guide/public/index.html
+++ b/packages/learn-js/guide/public/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>学习js</h1>
-    <script type="module" src="../index.js"></script>
+    <script type="module" src="../src/index.js"></script>
   </body>
 </html>
