--- a/packages/learn-js/guide/src/example/bd-map/index.html
+++ b/packages/learn-js/guide/src/example/bd-map/index.html
@@ -6,7 +6,8 @@
         body, html,#allmap {width: 80%;height: 80%;overflow: hidden;margin:0;font-family:"微软雅黑";}
     </style>
     <title>地图展示</title>
-    <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=oUcmqcDuK1tdQ8676qH7vEQptDb7zrBP"></script>
+    <!-- <script type="text/javascript" src="//api.map.baidu.com/api?v=3.0&ak=FO0rLOjM5eIY4O6soQWFlu85l2mMGzTI"></script> -->
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=ormIdMBiPiqfA1t5EMDWXS7W0bXqGLZW"></script>
     <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://gosspublic.alicdn.com/aliyun-oss-sdk.min.js"></script>
 </head>
